No expense found is not displaying for History Page

--- a/src/HistoryPageStyle.css
+++ b/src/HistoryPageStyle.css
@@ -6,33 +6,46 @@
     justify-content: center;
 }
 
-.history-distribution-table{
+.history-distribution-table {
     display: grid;
     grid-template-columns: auto auto 65px;
     margin: 20px;
     font-size: 15px;
 }
-.history-distribution-table .expense-area{
+
+.history-distribution-table .expense-area {
     font-weight: bold;
 }
 
-.history-distribution-table div.row{
+.history-distribution-table div.row {
     line-height: 30px;
     border-bottom: 1px solid rgb(224, 224, 224);
     padding: 10px;
 }
 
-.history-distribution-table div.last-column{
+.history-distribution-table div.last-column {
     border: none
 }
-.total-expense-amount{
+
+.total-expense-amount {
     font-size: 15px;
     display: flex;
     justify-content: flex-end;
-    padding: 20px;   
+    padding: 20px;
     color: rgb(255, 64, 129);
     text-transform: uppercase;
 }
+
+.no-expense-found {
+    color: rgb(255, 64, 129);
+    font-family: roboto;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: calc(100% - 200px);
+}
+
 /*.history-distribution-table div:hover{
     cursor: pointer;
     background-color: rgba(153, 153, 153, 0.2);         
