--- a/src/DistributionPage.css
+++ b/src/DistributionPage.css
@@ -18,48 +18,55 @@
     align-items: center;
 }
 
-.distribution-table {     
+.distribution-table {
     font-size: 15px;
-    padding: 20px;
+    padding: 15px;
     display: grid;
-    grid-template-columns: auto auto 65px 65px;
+    grid-template-columns: auto auto auto 70px;
+    max-height: calc(100% - 55px);
+    overflow: auto;
+    padding-bottom: 0;
+    padding-top: 0;
+    margin: 5px;
 }
 
 .distribution-table div {
     padding: 10px;
-    display: flex;    
+    display: flex;
     align-items: center;
     line-height: 30px;
     border-bottom: 1px solid rgb(224, 224, 224);
 }
-.distribution-table .expense-area{
+
+.distribution-table .expense-area {
     font-weight: bold;
 }
 
-.distribution-table div.last-column{
+.distribution-table div.last-column {
     border: none
 }
 
 .add-new-link {
-    padding: 11px;
-    display: flex;
-    justify-content: flex-end;
-    
+    padding: 6px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
-
 
 .colored-row {
     background: #F5F5DC;
 }
 
-.icons-container .material-icons{
-    padding: 0;
+.icons-container .material-icons {
+    padding: 2px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.material-icons:hover{
+.material-icons:hover {
     background-color: rgba(153, 153, 153, 0.2);
     cursor: pointer;
+    border-radius: 10px;
 }
+
