--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,8 @@
 }
 
 .custom-scrollBar::-webkit-scrollbar {
-  width: 10px;
+  width: 7px;
+  height: 7px;
 }
 
 .custom-scrollBar::-webkit-scrollbar-thumb {
@@ -42,7 +43,7 @@
 }
 
 .custom-scrollBar::-webkit-scrollbar-track {
-  background: #ddd;
+  background: transparent;
   border-radius: 20px;
 }
 
