--- a/src/DistributionPage.css
+++ b/src/DistributionPage.css
@@ -70,3 +70,12 @@
     border-radius: 10px;
 }
 
+.no-distribution-found{
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    color: rgb(255, 64, 129);
+    font-family: roboto;
+    text-transform: uppercase;
+}
