--- a/src/OverViewPage.css
+++ b/src/OverViewPage.css
@@ -1,8 +1,8 @@
-.overview-container{
+.overview-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between; 
-    align-items: center;    
+    justify-content: space-between;
+    align-items: center;
     height: 100%;
     font-family: arial;
     margin-left: 20px;
@@ -10,51 +10,158 @@
     width: 100%;
 }
 
-.current-Month{
+.current-Month {
     font-size: 35px;
-   
 }
-.total-Expense{
+
+.total-Expense {
     font-size: 60px;
     margin-left: 105px;
 }
-.overall{
+
+.overall {
     font-size: 23px;
 }
-.total-Expense-left{
+
+.total-Expense-left {
     font-size: 20px;
 }
 
-.limit-exceeded.total-Expense-left{
+.limit-exceeded.total-Expense-left {
     color: red;
 }
 
-.separator{
-    border:1px solid rgb(211,211,211);
+.separator {
+    border: 1px solid rgb(211, 211, 211);
     height: 80%;
 }
 
-.summary-chart-title{
+.summary-chart-title {
     font-size: 25px;
     padding-bottom: 20px;
 }
 
-.summary{
+.summary {
     width: 48%;
     float: left;
 }
 
-.summary-chart{
+.summary-chart {
     width: 48%;
     float: right;
 }
 
-.expense{
+.expense {
     font-size: 25px;
-    padding-bottom: 15px;
+    position: relative;
+    width: 45px;
 }
 
-.expenseArea{
+.expenseArea {
     font-size: 22px;
     font-family: verdana;
+}
+
+.chart-container {
+    display: flex;
+    min-height: 320px;
+    justify-content: space-around;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    flex: 1;
+}
+
+.bar-chat-item {
+    width: 20px;
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+}
+
+.budget-bar {
+    background-color: #5179D6;
+}
+
+.expense-bar {
+    background-color: #ED7D33;
+    left: 25px;
+}
+
+.char-range-container {
+    position: absolute;
+    width: 100%;
+    font-family: verdana;
+    font-size: 11px;
+}
+
+.char-range-line {
+    height: 1px;
+    background: #E0E0E0;
+}
+
+.chart-instruction .expense-instruction {
+    height: 10px;
+    width: 10px;
+    background-color: #ED7D33;
+    margin-right: 4px;
+}
+
+.chart-instruction .budget-instruction {
+    height: 10px;
+    width: 10px;
+    background-color: #5179D6;
+    margin-right: 4px;
+}
+
+.chart-instruction {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+}
+
+.chart-instruction div {
+    font-size: 12px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.expense-Areas-Container {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 10px;
+    padding-left: 31px;
+}
+
+.expense-Areas-Container .expense-area {
+    width: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 11px;
+    font-family: verdana;
+    text-transform: capitalize;      
+}
+
+.expense-Areas-Container .expense-area span{
+    overflow: hidden;
+    text-overflow: ellipsis;  
+    white-space: nowrap;
+}
+
+.chart-Element {
+    display: flex;
+}
+
+.scale-container {
+    display: flex;
+    flex-direction: column-reverse;
+    padding-right: 10px;    
+    align-items: flex-end;
+}
+
+.scale-container span {
+    font-size: 11px;
+    font-family: verdana;
+    position: relative;
 }
