--- a/src/DistributionPage.css
+++ b/src/DistributionPage.css
@@ -65,9 +65,9 @@
 }
 
 .material-icons:hover {
-    background-color: rgba(153, 153, 153, 0.2);
+    background-color: rgba(153, 153, 153, 0.4);
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 .no-distribution-found{
@@ -77,5 +77,6 @@
     justify-content: center;
     color: rgb(255, 64, 129);
     font-family: roboto;
-    text-transform: uppercase;
+    text-transform: capitalize;
+    font-size: 20px;
 }
