--- a/src/BudgetPage.css
+++ b/src/BudgetPage.css
@@ -1,5 +1,5 @@
 .budget-container {
-    height: 100%;
+    height: calc(100% - 65px);
     width: 100%;
     display: flex;
     align-items: center;
