--- a/src/DistributionPage.css
+++ b/src/DistributionPage.css
@@ -14,7 +14,7 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 65px);
     align-items: center;
 }
 
