--- a/src/HistoryPageStyle.css
+++ b/src/HistoryPageStyle.css
@@ -1,5 +1,5 @@
 .history-page-container {
-    height: 100%;
+    height: calc(100% - 65px);
     width: 100%;
     display: flex;
     align-items: center;
