--- a/src/OverViewPage.css
+++ b/src/OverViewPage.css
@@ -3,11 +3,11 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 100%;
+    height: calc(100% - 65px);
     font-family: arial;
     margin-left: 20px;
     margin-right: 20px;
-    width: 100%;
+    width: calc(100% - 40px);
 }
 
 .current-Month {
