--- a/src/ToolbarPage.css
+++ b/src/ToolbarPage.css
@@ -6,8 +6,8 @@
 }
 
 .page-content {
-    height: calc(100% - 70px);
-    width: calc(100% - 20px);
+    height: 100%;
+    width: 100%;
 }
 
 .app-bar-right-element{
