--- a/src/DistributionPage.css
+++ b/src/DistributionPage.css
@@ -18,24 +18,30 @@
     align-items: center;
 }
 
+.distribution-table div.expense-row{
+    justify-content: space-between;
+    border-bottom: 1px solid rgb(224, 224, 224);
+    padding: 10px; 
+    min-height: 30px;  
+}
+
 .distribution-table {
     font-size: 15px;
     padding: 15px;
-    display: grid;
-    grid-template-columns: auto auto auto 70px;
+    display: flex;
+    flex-direction: column;
     max-height: calc(100% - 55px);
+    height: calc(100% - 55px);
     overflow: auto;
     padding-bottom: 0;
     padding-top: 0;
     margin: 5px;
 }
 
-.distribution-table div {
-    padding: 10px;
+.distribution-table div {   
     display: flex;
     align-items: center;
-    line-height: 30px;
-    border-bottom: 1px solid rgb(224, 224, 224);
+    line-height: 30px;    
 }
 
 .distribution-table .expense-area {
